# qianxun

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  check_completion.py  check_mode.py  docker-compose.yml
docs/: README.md  (+8 more)
qianxun/: .dockerignore  Cargo.toml  Dockerfile  daemon.service
qianxun-acp/: Cargo.toml
qianxun-acp/src/: acp_output.rs  forwarding_tools.rs  handler.rs  lib.rs  prompt.rs  server.rs  session.rs  transport.rs  types.rs
qianxun-cli/: Cargo.toml
qianxun-cli/src/: cli.rs  config.rs  lib.rs  main.rs  output.rs
qianxun-core/: Cargo.toml
qianxun-core/src/: config.rs  event.rs  lib.rs  output.rs  types.rs  workspace.rs
qianxun-core/src/agent/: conversation.rs  engine.rs  message.rs  mod.rs  pattern.rs  plan.rs  reflect.rs  system_prompt.rs  workflow.rs
qianxun-core/src/agent/context/: compact.rs  mod.rs  normalize.rs  window.rs
qianxun-core/src/blackboard/: mod.rs
qianxun-core/src/context/: memory.rs  mod.rs
qianxun-core/src/hooks/: mod.rs
qianxun-core/src/kanban/: db.rs  dispatcher.rs  error.rs  kanban_schema.sql  mod.rs  state_machine.rs  team.rs  types.rs
qianxun-core/src/mcp/: client.rs  config.rs  mod.rs  server_manager.rs  tool_wrapper.rs  transport.rs
qianxun-core/src/provider/: anthropic_compat.rs  deepseek.rs  error_classifier.rs  failover.rs  mod.rs  types.rs
qianxun-core/src/skills/: lifecycle.rs  mod.rs
qianxun-core/src/subagent/: mod.rs
qianxun-core/src/tools/: builtin.rs  kanban.rs  mod.rs
qianxun-core/tests/: builtin_init.rs
qianxun-desktop/src-tauri/: Cargo.toml  tauri.conf.json
qianxun-desktop/src-tauri/capabilities/: main.json
qianxun-desktop/src-tauri/src/: lib.rs  main.rs  time.rs
qianxun-desktop/src-tauri/src/commands/: mod.rs
qianxun-desktop/src-tauri/src/commands/health/: check.rs  fetch.rs  mock.rs  mod.rs  types.rs
qianxun-desktop/src-tauri/src/commands/runtime/: background.rs  cancel.rs  load.rs  mod.rs  plans.rs  send.rs  sessions.rs  sub_sessions.rs
qianxun-desktop/src-tauri/src/commands/stronghold/: key.rs  keyprovider.rs  mod.rs  snapshot.rs  vault.rs
qianxun-desktop/src-tauri/src/events/: mod.rs  state_changed.rs
qianxun-desktop/src-tauri/src/state/: mod.rs  runtime.rs
qianxun-desktop/src-tauri/tests/: stronghold_e2e.rs
qianxun-memory/: Cargo.toml
qianxun-memory/src/: compressor.rs  consolidation.rs  db.rs  lib.rs  privacy.rs  search.rs  slot.rs  types.rs  vector.rs
qianxun-runtime/: Cargo.toml
qianxun-runtime/src/: agent_host.rs  background_task.rs  core.rs  lib.rs  output_sink.rs  persistence.rs  session_runtime.rs  sse.rs  state.rs
qianxun-runtime/src/api/: background_task.rs  cancel.rs  error.rs  load.rs  mod.rs  plans.rs  send.rs  sessions.rs  sub_sessions.rs  trait_def.rs  types.rs
qianxun/src/: buf_writer.rs  main.rs
qianxun/src/acp/: forwarding_tools.rs  handler.rs  lib.rs  mod.rs  output.rs  prompt.rs  server.rs  session.rs  transport.rs  types.rs
qianxun/src/cli/: cli.rs  config.rs  mod.rs  output.rs  run.rs
qianxun/src/client/: daemon_client.rs  mod.rs  probe.rs  reconnect.rs  repl.rs  sse_parser.rs  types.rs
qianxun/src/client/tests/: mod.rs
qianxun/src/daemon/: agent_host.rs  auth.rs  build.rs  deliverable-8a-daemon.md  kanban_host.rs  llm_integration_tests.rs  mod.rs  mvp1_integration_tests.rs  output_sink.rs  persistence.rs  router.rs  service.rs  session_runtime.rs  sse.rs  team_registry.rs
qianxun/src/daemon/output_sink/: builder.rs  messages.rs  mod.rs  trait_impl.rs
qianxun/src/daemon/output_sink/tests/: mod.rs
qianxun/src/daemon/persistence/: ddl.rs  error.rs  event_log_dao.rs  kanban_schema.rs  mod.rs  session_dao.rs  snapshot_dao.rs  types.rs
qianxun/src/daemon/persistence/tests/: mod.rs
qianxun/src/daemon/tests/: graceful_shutdown.rs  llm_real_provider.rs  mod.rs  mvp1_prompt.rs
qianxun/src/daemon/ui/: deliverable-7a-webui.md  deliverable-9c-settings.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
qianxun/src/daemon/ui/scripts/: args-shot.json
qianxun/src/daemon/ui/src/: app.css  app.html
qianxun/src/daemon/ui/src/lib/: stages-7b.test.ts  stages-9c-settings.test.ts  utils.ts
qianxun/src/daemon/ui/src/lib/api/: config.ts  integration.test.ts  kanban.ts  llm.ts  memory.ts  projects.ts  sessions.ts  skills.ts  system.ts  tools.ts
qianxun/src/daemon/ui/src/lib/i18n/: en.json  zh-CN.json
qianxun/src/daemon/ui/src/lib/sse/: client.ts  kanban_parser.ts  parser.test.ts
qianxun/src/daemon/ui/src/lib/stores/: auth.svelte.ts  auth.test.ts  theme.svelte.ts  ui.svelte.ts
qianxun/src/daemon/ui/src/lib/types/: api.ts  kanban.ts
qianxun/src/daemon/ui/src/lib/utils/: cn.test.ts
qianxun/src/daemon/ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
qianxun/src/daemon/ui/src/routes/chat/: +page.svelte
qianxun/src/daemon/ui/src/routes/config/: +page.svelte
qianxun/src/daemon/ui/src/routes/kanban/: +page.svelte
qianxun/src/daemon/ui/src/test-stubs/: app-environment.ts  app-navigation.ts  app-paths.ts
qianxun/src/daemon/ui/tests/e2e/: debug.spec.ts  management.spec.ts
qianxun/src/runtime/: agent_host.rs  auth.rs  llm_integration_tests.rs  llm_providers.rs  mod.rs  mvp1_integration_tests.rs  output_sink.rs  persistence.rs  router.rs  sse_axum.rs
qianxun/src/runtime/ui/: deliverable-10c-tests.md  deliverable-9c-responsive.md  playwright.config.ts  svelte.config.js  vitest.config.ts
qianxun/src/runtime/ui/scripts/: args-eval.json  args-llm.json  args-nav.json  csp-e2e.mjs  dev-e2e.mjs  serve.mjs
qianxun/src/runtime/ui/src/: app.d.ts  test-setup.ts
qianxun/src/runtime/ui/src/lib/: stages-9c.test.ts
qianxun/src/runtime/ui/src/routes/: +page.svelte
qianxun/src/runtime/ui/src/test-stubs/: app-state.ts
qianxun/src/runtime/ui/tests/e2e/: responsive.spec.ts
qianxun/src/server/: admin.rs  auth.rs  auth_ws.rs  messages.rs  mod.rs  outbox.rs  rate_limit.rs  team_db.rs  ws_hub.rs
qianxun/src/server/static_ui/: app.js  app.test.js  index.html  login.js  package.json  pnpm-lock.yaml  style.css  vitest.config.js
qianxun/src/tui/: mod.rs
(+378 files in other folders)
