[workspace]
resolver = "2"
members = ["qianxun-core", "qianxun-cli", "qianxun-acp"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
tokio = "1"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
chrono = "0.4"
lru = "0.12"
uuid = "1"
clap = "4"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "webpki-roots"] }
json_comments = "0.2"
rustyline = "15"
notify = "7"
indicatif = "0.17"
console = "0.15"
