[workspace]
resolver = "2"
members = ["qianxun-core", "qianxun", "qianxun-memory", "qianxun-runtime"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
tokio = "1"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
chrono = "0.4"
lru = "0.12"
uuid = "1"
clap = "4"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "webpki-roots"] }
json_comments = "0.2"
notify = "8.2.0"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
tui-input = "0.15"
unicode-width = "0.2.2"
rusqlite = { version = "0.34", features = ["bundled", "vtab", "column_decltype"] }
regex = "1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "fs", "set-header"] }
keyring = "3"
argon2 = "0.5"
jsonwebtoken = "9"
tokio-stream = "0.1"
dirs = "6"
bcrypt = "0.19"
