[package]
name = "qianxun-acp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "千寻 ACP 协议 — 通过 stdio JSON-RPC 2.0 与编辑器通信"

[dependencies]
qianxun-core = { path = "../qianxun-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
