[package]
name = "qianxun-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "千寻核心引擎 — Agent 引擎、Provider、工具系统、记忆、Skills、事件总线"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
lru = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true }
json5 = { workspace = true }
