[package]
name = "qianxun-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "千寻记忆引擎 — SQLite + FTS5 + Vector 混合检索"

[dependencies]
qianxun-core = { path = "../qianxun-core" }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
lru = { workspace = true }
regex = { workspace = true }
