[package]
name = "qianxun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "千寻 — 个人 AI 助手"

[[bin]]
name = "qx"
path = "src/main.rs"

[dependencies]
qianxun-core = { path = "../qianxun-core" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rustyline = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
reqwest = { workspace = true }
