[package]
name = "qianxun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "千寻 — 个人 AI 助手"

[[bin]]
name = "qx"
path = "src/main.rs"

[dependencies]
qianxun-core = { path = "../qianxun-core" }
qianxun-memory = { path = "../qianxun-memory", optional = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rustyline = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
keyring = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dirs = "6"
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
tokio-stream = { workspace = true }
