[package]
name = "qianxun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Stage 12: build.rs 已删. UI build 走 scripts/run.py (4 模式: dev/release/build-debug/build-release).
# vite 自带 watch (dev) + 自带 build (release), 不需要 cargo 这边再调 pnpm.
description = "千寻 — 个人 AI 助手"

[[bin]]
name = "qx"
path = "src/main.rs"

[dependencies]
qianxun-core = { path = "../qianxun-core" }
qianxun-memory = { path = "../qianxun-memory" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-input = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
keyring = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dirs = "6"
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
tokio-stream = { workspace = true }
bcrypt = { workspace = true }
base64 = "0.22"
getrandom = "0.2"

[build-dependencies]
# build.rs 用 std + Command 即可, 不引新 crate
# (cargo 自动把 build.rs 视作独立编译单元, 不需要 [dependencies])

