[package]
name = "qianxun-desktop"
version = "0.1.0"
description = "千寻 Tauri 桌面端 (Track C) — Stage 2 Tauri 2.0 集成骨架"
authors = ["maxu"]
edition = "2021"
rust-version = "1.85"
publish = false

# Stage 2: 这是独立 Cargo crate, 不加入主 workspace.
# qianxun-core 走 path dep 复用主项目核心库.
#
# 显式声明 [workspace] (空 table) — 防止 Cargo 沿父目录找到主 workspace
# 然后报 "current package believes it's in a workspace when it's not" 错误.

[workspace]

[lib]
name = "qianxun_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
# Stage 6a (§11.3): 凭据加密 vault.
# 计划: 走 tauri-plugin-stronghold, 但 v2.3.1 没有公开的 Rust API
# (只有 JS-bound invoke handlers). 直接用 iota_stronghold (plugin 的底层)
# 实现 set_secret / get_secret — 同一加密引擎, 跳过 plugin wrapper.
# Stage 7+ 可重加 plugin 用于 keyring (OS) 兜底 + JS API.
iota_stronghold = "2.1"
# 包裹密码, drop 时清零内存 (set_secret / get_secret 都要)
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 2026-06-09 启动日志本地化: tracing-subscriber 0.3.23 没有内置 LocalTime,
# 自己用 time crate (轻量, ~0 额外依赖) 实现 FormatTime trait.
# 输出格式: "2026-06-09 19:03:13.245" 本地时间 + ms 精度.
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
# 2026-06-09: state/runtime.rs 用 futures::executor::block_on 同步跑 async fn
# (RuntimeState::new 是 async 但内部全同步, 跑在 spawn_blocking 线程里 OK)
futures = "0.3"
# HTTP 客户端 (用于 daemon_health_fetch), 复用 qianxun-core 的 reqwest 配置策略:
# default-features=false 走纯 rustls, 不需要 OpenSSL/cmake.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
# 直接复用主项目核心库 (path = src-tauri/ -> qianxun-desktop/ -> qianxun/ -> qianxun-core/)
qianxun-core = { path = "../../qianxun-core" }
# Stage 4a-2 (04b sub-task #2): 接入真 runtime.
# qianxun-runtime: 复用 daemon 5 核心 (agent_host / service / persistence / session_runtime / output_sink / sse)
#                  + RuntimeState (9 字段跨桌面 / daemon 共享)
# qianxun-memory: SessionStore 跟 MemoryCore 都需要 (RuntimeState dep 树里也有, desktop 直接 dep 复用)
qianxun-runtime = { path = "../../qianxun-runtime" }
qianxun-memory = { path = "../../qianxun-memory" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
